--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
+  "homepage": "http://Shibumishra.github.io/react-flickr-api",
   "name": "travle",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.14.8",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "babel-runtime": "^6.26.0",
+    "core-js": "^3.16.0",
+    "material-ui": "^1.0.0-beta.47",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-debounce-input": "^3.2.4",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
+    "react-masonry-component": "^6.3.0",
+    "react-modal": "^3.14.3",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "register-service-worker": "^1.7.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
